<resources>
    <string name="app_name">Test App</string>
    <string name="main_greetings">Hello, humans! I\'m glad to see you!</string>
    <string name="button_sendMessage">Click me and cry!</string>
    <string name="input_sendedMessage">CLEAR ME</string>
    <string name="error_message">Oups! Error, sorry!</string>
    <string name="timer_start">start</string>
    <string name="timer_pause">pause</string>
    <string name="timer_stop">stop</string>
    <string name="send_email">Email</string>
    <string name="send_subject">Subject</string>
    <string name="send_message">Your message</string>
    <string name="send_buttonSend">Send</string>
    <string-array name="main_spinner">
        <item>Timer</item>
        <item>Send Message</item>
        <item>In future</item>
        <item>In future</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
