<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.a16mb.wilat.myapplication.TimerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTimerNumbers"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_margin="5dp"
        android:id="@+id/timerText"
        android:layout_weight="6"
        android:gravity="bottom"
        android:layout_gravity="center_horizontal"
    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/timerButtonPadding"
        android:background="@color/colorTimerButton"
        android:textColor="@color/colorTimerButtonText"
        android:text="@string/timer_start"
        android:onClick="buttonStartOnClick"
        android:textSize="@dimen/timerButtonTextSize"
        android:layout_gravity="bottom|center_horizontal"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/timerButtonPadding"
        android:background="@color/colorTimerButton"
        android:textColor="@color/colorTimerButtonText"
        android:text="@string/timer_pause"
        android:onClick="buttonPauseOnClick"
        android:textSize="@dimen/timerButtonTextSize"
        android:layout_gravity="bottom|center_horizontal"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/timerButtonPadding"
        android:background="@color/colorTimerButton"
        android:textColor="@color/colorTimerButtonText"
        android:text="@string/timer_stop"
        android:onClick="buttonStopOnClick"
        android:textSize="@dimen/timerButtonTextSize"
        android:layout_weight="1"
        android:layout_gravity="bottom|center_horizontal"
        />
</LinearLayout>
